# supervisedgenksc

./: .gitignore  hello.py  pyproject.toml  requirements.txt
config/: config.yaml
notebooks/: plot_results.ipynb  tryout.ipynb
src/: dataloader.py  encoder_decoder.py  main.py  prepare_data.py  soft_ksc_rkm_model.py  stiefel_optimizer.py  supervised_ksc_model.py  train.py  training.py  utils.py  utils_cayley.py
tests/: test_soft_clustering.py
